--- a/12-WebApi-Ajax/src/09-ApiRest/wwwroot/Pages/Index.html
+++ b/12-WebApi-Ajax/src/09-ApiRest/wwwroot/Pages/Index.html
@@ -9,8 +9,8 @@
     <h2>Personas</h2>
     <div id="txtContenedor" style="border:black 1px solid"></div>
     <br />
-    <input id="txbIDBorrar" type="text" placeholder="ID de la persona" inputmode="numeric"/>    
-    <button id="btnBorrar" onclick="borrar()">BORRAR</button>
+    <!--<input id="txbIDBorrar" type="text" placeholder="ID de la persona" inputmode="numeric"/>-->    
+    <!--<button id="btnBorrar" onclick="borrar()">BORRAR</button>-->
     <br /><br />
     <div id="txtCreacion" style="border:black 1px solid">
         <form>           
