Proseguido ejercicio CRUD

--- a/12-WebApi-Ajax/src/09-ApiRest/wwwroot/Pages/Index.html
+++ b/12-WebApi-Ajax/src/09-ApiRest/wwwroot/Pages/Index.html
@@ -19,8 +19,8 @@
             Fecha de Nacimiento:   <input id="txtPFechaNamicion" type="date" placeholder="dd/mm/aaaa" /><br />
             Dirección:   <input id="txtPDireccion" type="text" placeholder="Dirección" /><br />
             Teléfono:   <input id="txtPTelefono" type="text" placeholder="Teléfono" /><br />
-            <input id="btnSubmit" type="submit" value="CREAR" />  
-                      
+            <button id="btnSubmit">CREAR</button>
+            <button id="btnCerrar">CERRAR</button>                      
         </form>
     </div>
 </body>
